# regulation_manager

./: .coverage  .coveragerc  .env  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMAND_ALIASES.md  COMPONENT_6_PERFORMANCE_SUMMARY.md  DDD_IMPLEMENTATION_REPORT.md  DDD_PHASE1_COMPLETE.md  FLIP_THE_RAG_IMPLEMENTATION_SUMMARY.md  GROUND_TRUTH_IMPLEMENTATION_REPORT.md  LLM_GUIDE.md  PHASE1_INTEGRATION_COMPLETE.md  PHASE1_INTEGRATION_SUMMARY.md  PHASE1_VERIFICATION_REPORT.md  PHASE_4_5_IMPLEMENTATION_SUMMARY.md  PRODUCT_BACKLOG.md  QUERY_PIPELINE.md  QUICKSTART.md  QUICK_START_EVALUATION.md  RAGAS_METRICS_IMPLEMENTATION_SUMMARY.md  README.md  SCHEMA_REFERENCE.md  TASKS_BACKLOG.md  USAGE_SCENARIOS.md  UX_COPY.md  UX_FLOWS.md  benchmark_514.hwpx  benchmark_parsing_performance.py  benchmark_results.json  cli_test_results.json  debug_hwpx_parser.py  debug_hwpx_structure.py  debug_intent.py  debug_parsing.py  (+43 more)
.agent/: skills
.agent/workflows/: auto_improve_rag.md  comprehensive_rag_testing.md
.cache/: coverage  file_state_cache.json
.cache_benchmark/: llm_response_cache.json
.cache_test_sim/: file_state_cache.json
.claude/: settings.json
.claude/agents/: rag-parent.md  (+6 more)
.deepeval/: .deepeval_telemetry.txt
.github/: copilot-instructions.md
.moai/: manifest.json  status_line.sh
.serena/: project.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
data/: sync_state.json  temp_auto_feedback.jsonl  verification_report.md  verification_results.json
docs/: API_V2.1.md  EVALUATION_QUICK_START.md  EXECUTION_SUMMARY.md  LLM_GUIDE.md  PERFORMANCE_TUNING.md  QUALITY_DASHBOARD.md  RAG_IMPROVEMENTS.md  RAG_QUALITY_EVALUATION_REPORT.md  RELEASE_NOTES.md  SECURITY_GUIDE.md  SPEC_RAG_001_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TESTING_INFRASTRUCTURE.md  dense_retrieval_implementation.md  graph_rag_evaluation.md  implementation_plan_phase3.md  improvement_plan.md  phase1_integration_fix.md  report_phase1_3.md  schema_v2.md
dummy/: chroma.sqlite3
output/: 규정집9-343(20250909)_clean.md  규정집9-349(20251202)_clean.md  규정집9-350(20251209)_clean.md
scripts/: __init__.py  analyze_all_failures.py  analyze_failed_queries.py  analyze_failures.py  analyze_failures_detail.py  analyze_online_class.py  auto_evaluate.py  check_bokmu.py  check_failed_cases.py  check_graduation.py  check_rule_codes.py  compare_evals.py  comprehensive_quality_evaluation.py  custom_judge_evaluation.py  custom_llm_judge_eval.py  debug_diff.py  diagnose_detailed.py  diagnose_failures.py  direct_llm_judge_eval.py  eval_debug.py  evaluate_rag_quality.py  evaluate_ragas.py  factcheck.py  generate_ground_truth.py  generate_intents.py  generate_quality_test_data.py  generate_ragas_report.py  generate_synonyms.py  generate_synthetic_test_data.py  generate_test_queries.py  get_actual_intents.py  inspect_hierarchy.py  learn_from_failures.py  measure_phase1_improvements.py  patch_json_addenda.py  pilot_rag_quality_test.py  post_spec006_evaluation.py  quick_rag_eval.py  quick_test.sh  real_evaluation_test.py  (+42 more)
src/: analyze_json.py  cache_manager.py  collect_files.py  converter.py  enhance_for_rag.py  exceptions.py  formatter.py  inspect_json.py  interactive.py  llm_client.py  main.py  metadata_extractor.py  preprocessor.py  refine_json.py  repair.py  verify_json.py
test_reports/: RAG_QUALITY_EVALUATION_FRAMEWORK.md  RAG_시스템_품질_평가_보고서.md  ragas_evaluation_20260129_173920.json  ragas_report_20260129_173920.txt
test_results/: comprehensive-eval-20260125-160729.json  comprehensive_evaluation_data.json  comprehensive_rag_quality_evaluation_report.md  final-test-001.json  final-test-seed-42.json  full-test-001.json  full-test-002.json  integration-test-002.json  iter5-eval.json  iteration-001-exec.json  iteration-001.json  post_spec006_eval_20260217_215500.json  quick_eval_20260126_195327.json  quick_eval_20260126_224816.json  quick_eval_20260126_233012.json  rag_quality_comprehensive_report_20250125.md  rag_quality_eval_20250125.json  real-test-001.json  test-20260125-170304.json  test-seed-42-repro.json  test-seed-42-v2.json  test-seed-42.json  test-seed-template-42.json  test-seed-template-99.json  test-self-rag.json  test_report_final-test-seed-42_20260125_202739.md  test_report_full-test-002_20260125_160448.md  test_report_iteration-001_20260126_110528.md  test_report_iteration-001_20260126_110904.md  test_report_rag_quality_eval_20250125_20260125_165625.html  test_report_test-20260125-170304_20260125_171701.html  test_report_test-seed-42-repro_20260125_202509.md  test_report_test-seed-42-v2_20260125_202442.md  test_report_test-seed-42_20260125_201952.md  test_report_test-seed-42_20260125_202200.md  test_report_test-seed-template-42_20260125_202441.md  test_report_test-seed-template-99_20260125_202452.md  test_report_test-self-rag_20260125_174602.md
test_scenarios/: comprehensive_evaluation.py  rag_quality_evaluator.py  run_evaluation.py
tests/: COVERAGE_IMPROVEMENTS.md  MEMORY_LEAK_FIX.md  benchmark.py  conftest.py  debug_title.py  manual_verification.py  reproduce_issue.py  test_analysis.py  test_analyze_json_extended.py  test_apply_improvement_usecase.py  test_brute_coverage.py  test_cache_manager_comprehensive.py  test_cache_manager_edge.py  test_caching_logic.py  test_chroma_store_extended.py  test_component_analyzer_coverage.py  test_converter.py  test_converter_coverage.py  test_converter_extended.py  test_coverage_boost.py  test_enhance_for_rag.py  test_enhance_for_rag_coverage.py  test_exceptions.py  test_focused_coverage_improvement.py  test_formatter_coverage.py  test_formatter_deep.py  test_formatter_extended.py  test_formatter_extended2.py  test_formatter_uncovered.py  test_gradio_app_coverage.py  test_gradio_app_extended.py  test_interactive.py  test_interactive_extended.py  test_llm_client_coverage.py  test_llm_extended.py  test_llm_query_generator.py  test_main.py  test_main_coverage.py  test_main_extended.py  test_main_failure_modes.py  (+20 more)
tmp_html_debug/: index.xhtml  styles.css
규정/: 규정집9-343(20250909).hwp  규정집9-349(20251202).hwp
(+1333 files in other folders)
