[project]
name = "regulation-manager"
version = "0.1.0"
description = "Convert HWP regulations to structured JSON and power RAG search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["regulation", "hwp", "rag", "llm", "chromadb", "university"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "llama-index>=0.14.10",
    "llama-index-llms-openai",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-llms-gemini",
    "llama-index-llms-openrouter",
    "llama-index-llms-ollama",
    "beautifulsoup4",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "chromadb>=1.4.0",
    "openai>=2.11.0",
    "gradio>=6.2.0",
    "flagembedding>=1.3.5",
    "mcp[cli]>=1.9.0",
    "mlx-lm>=0.29.1",
    "kiwipiepy>=0.20.0",
    "sentence-transformers>=2.2.0",
    "ragas>=0.4.3",
    "deepeval>=3.8.1",
    "pytest-asyncio>=0.21.0",
    "reportlab>=4.0.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "editdistance>=0.6.2",
    "ragas>=0.1.0",
    "click>=8.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "psutil>=5.9.0",
    "ragas>=0.1.0",
    "deepeval>=0.21.0",
]
[project.scripts]
# Main entry point
regulation = "src.rag.interface.unified_cli:main"
# HWPX reparse command (SPEC-CHUNK-002)
reparse-hwpx = "src.commands.reparse_hwpx:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]
